# InterBox-Ebay-scrapper-test-task

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: scraped_data.json
src/: main.py
src/app/: scrapper.py  utils.py
src/configs/: config.py
