[tool.poetry]
name = "interbox-ebay-scrapper-test-task"
version = "0.1.0"
description = ""
authors = ["AlexanderLukash <sashass20062727@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
environs = "^11.0.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
